# pygor

./: .buildinfo  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  README.rst  create_release_notes.sh  docker_entrypoint.sh  genindex.html  github_changelog.sh  index.html  installation.html  models.html  objects.inv  py-modindex.html  readme.html  requirements-dev.txt  requirements-travis.txt  requirements.txt  requirements_travis.txt  search.html  searchindex.js  setup.cfg  setup.py  usage.html  use_cases.html
.github/workflows/: build.yml  build_and_deploy.yml  documentation.yml  immuno-props-package.yml  release.yml  test.yml
_modules/: index.html
_modules/immuno_probs/alignment/: muscle_aligner.html
_modules/immuno_probs/cdr3/: anchor_locator.html  olga_container.html
_modules/immuno_probs/cli/: build_igor_model.html  convert_adaptive_sequences.html  evaluate_sequences.html  generate_sequences.html  locate_cdr3_anchors.html
_modules/immuno_probs/convert/: adaptive_sequence_convertor.html
_modules/immuno_probs/model/: default_models.html  igor_interface.html  igor_loader.html
_modules/immuno_probs/util/: cli.html  constant.html  conversion.html  io.html  processing.html
_sources/: index.rst.txt  installation.rst.txt  models.rst.txt  use_cases.rst.txt
_sources/source/: immuno_probs.alignment.rst.txt  immuno_probs.cli.rst.txt  immuno_probs.rst.txt  immuno_probs.util.rst.txt  modules.rst.txt
docs/: conf.py  index.rst  installation.rst  models.rst  readme.rst  tutorial.rst  usage.rst  use_cases.rst
docs/source/: immuno_probs.alignment.rst  immuno_probs.cdr3.rst  immuno_probs.cli.rst  immuno_probs.convert.rst  immuno_probs.model.rst  immuno_probs.rst  immuno_probs.util.rst  immuno_probs.vdj.rst
galaxy/: build_igor_model.xml  evaluate_seqs.xml  evaluate_sequences.xml  generate_seqs.xml  generate_sequences.xml  locate_cdr3_anchors.xml
immuno_probs/: __init__.py  __main__.py
immuno_probs/alignment/: __init__.py  align_read.py  muscle_aligner.py
immuno_probs/cdr3/: __init__.py  anchor_locator.py  olga_container.py
immuno_probs/cli/: __main__.py  build_igor_model.py  convert_adaptive_sequences.py  create_cdr3_anchors.py  create_igor_model.py  evaluate_seqs.py  evaluate_sequences.py  evaluate_vdj_seqs.py  extract_file_sequences.py  generate_seqs.py  generate_sequences.py  generate_vdj_seqs.py  locate_cdr3_anchors.py
immuno_probs/config/: default.ini
immuno_probs/convert/: adaptive_sequence_convertor.py
immuno_probs/data/: default_models.py
immuno_probs/data/human_T_beta/: genomic_V.fasta
immuno_probs/data/human_b_heavy/: IGHV.fasta  J_gene_CDR3_anchors.tsv  V_gene_CDR3_anchors.tsv
immuno_probs/data/human_t_alpha/: J_gene_CDR3_anchors.tsv  V_gene_CDR3_anchors.tsv  genomic_V.fasta
immuno_probs/data/human_t_beta/: V_gene_CDR3_anchors.tsv
immuno_probs/data/mouse_T_beta/: genomic_V.fasta
immuno_probs/data/tutorial/: CDR3_sequences.csv  VJ_sequences.csv
immuno_probs/data/tutorial_model/: CDR3_sequences.csv  CDR3_sequences.tsv  VDJ_sequences.csv  VDJ_sequences.tsv
immuno_probs/default_models/human_b_heavy/: genomic_V.fasta
immuno_probs/model/: default_models.py  igor_interface.py  igor_loader.py
immuno_probs/tutorial/: tutorial_data.py
immuno_probs/util/: cli.py  constant.py  conversion.py  exception.py  io.py  processing.py
immuno_probs/vdj/: sequence_extractor.py
immunoprobs/: __main__.py
immunoprobs/alignment/: align_read.py
immunoprobs/cdr3/: anchor_locator.py
immunoprobs/cli/: create_cdr3_anchors.py
immunoprobs/util/: cli.py  constant.py  conversion.py  exception.py  io.py  processing.py
pygor/: __init__.py  __main__.py
pygor/alignment/: CDR3_tools.py  __init__.py  align_read.py  muscle_aligner.py
pygor/alignments/: align_read.py
pygor/aligns/: CDR3_tools.py  __init__.py  align_read.py
pygor/cdr3/: __init__.py  anchor_locator.py  sequence_locator.py
pygor/cli/: __init__.py  create_cdr3_anchors.py
pygor/counter/: __init__.py
pygor/counter/bestscenarios/: __init__.py  bestscenarios.py
pygor/counter/coverage/: __init__.py  (+1 more)
pygor/counters/: __init__.py
pygor/model/: __init__.py  entropy.py  genmodel.py  hypermglobal.py
pygor/models/: __init__.py  entropy.py  genmodel.py  hypermglobal.py
pygor/util/: __init__.py  cli.py  constant.py  conversion.py  conversions.py  exception.py  io.py  processing.py
pygor/utils/: __init__.py  conversions.py  utils.py
source/: immuno_probs.alignment.html  immuno_probs.cdr3.html  immuno_probs.cli.html  immuno_probs.convert.html  immuno_probs.html  immuno_probs.model.html  immuno_probs.util.html  modules.html
tests/alignment/: test_muscle_aligner.py
tests/cdr3/: test_anchor_locator.py  test_olga_container.py  test_sequence_locator.py
tests/convert/: test_adaptive_sequence_convertor.py
tests/model/: test_igor_interface.py  test_igor_loader.py
tests/util/: test_cli.py  test_conversion.py  test_io.py  test_processing.py
tests/utils/: test_conversion.py  test_processing.py
tests/vdj/: test_sequence_extractor.py
(+15 files in other folders)
