# Include the license file in the wheel.
[metadata]
name = immuno-probs
version = 0.1.5
url = https://github.com/penuts7644/ImmunoProbs
author = Wout van Helvoirt
author_email = wout.van.helvoirt@icloud.com
description = ImmunoProbs Python package able to calculate the generation probability of V(D)J and CDR3 sequences.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Bug Reports = https://github.com/penuts7644/ImmunoProbs/issues
keywords = Bio-Informatics, Recombination, Sequencing, Analysis, DNA, Model, Genes, Kmer, Immune, Probs, Probability


[options]
zip_safe = False
include_package_data = False
packages = find:
install_requires =
    pandas>=0.23.4
    numpy>=1.15.2
    scipy>=1.1.0
    matplotlib==2.2.3
    biopython>=1.72
    pathos>=0.2.2.1
    olga>=1.0.2

[options.extras_require]
development =
    pytest>=3.8.2
    twine>=1.12.1

[options.entry_points]
console_scripts =
    immuno-probs = immuno_probs.cli.__main__:main

[options.data_files]
human_b_heavy =
    immuno_probs/data/human_b_heavy/genomic_D.fasta
    immuno_probs/data/human_b_heavy/genomic_J.fasta
    immuno_probs/data/human_b_heavy/genomic_V.fasta
    immuno_probs/data/human_b_heavy/J_gene_CDR3_anchors.csv
    immuno_probs/data/human_b_heavy/model_marginals.txt
    immuno_probs/data/human_b_heavy/model_params.txt
    immuno_probs/data/human_b_heavy/V_gene_CDR3_anchors.csv
human_t_alpha =
    immuno_probs/data/human_t_alpha/genomic_J.fasta
    immuno_probs/data/human_t_alpha/genomic_V.fasta
    immuno_probs/data/human_t_alpha/J_gene_CDR3_anchors.csv
    immuno_probs/data/human_t_alpha/model_marginals.txt
    immuno_probs/data/human_t_alpha/model_params.txt
    immuno_probs/data/human_t_alpha/V_gene_CDR3_anchors.csv
human_t_beta =
    immuno_probs/data/human_t_beta/genomic_D.fasta
    immuno_probs/data/human_t_beta/genomic_J.fasta
    immuno_probs/data/human_t_beta/genomic_V.fasta
    immuno_probs/data/human_t_beta/J_gene_CDR3_anchors.csv
    immuno_probs/data/human_t_beta/model_marginals.txt
    immuno_probs/data/human_t_beta/model_params.txt
    immuno_probs/data/human_t_beta/V_gene_CDR3_anchors.csv
mouse_t_beta =
    immuno_probs/data/mouse_t_beta/genomic_D.fasta
    immuno_probs/data/mouse_t_beta/genomic_J.fasta
    immuno_probs/data/mouse_t_beta/genomic_V.fasta
    immuno_probs/data/mouse_t_beta/J_gene_CDR3_anchors.csv
    immuno_probs/data/mouse_t_beta/model_marginals.txt
    immuno_probs/data/mouse_t_beta/model_params.txt
    immuno_probs/data/mouse_t_beta/V_gene_CDR3_anchors.csv
